--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -4,10 +4,52 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
 
-    <Button
-        android:id="@+id/main_start_new_prf"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" >
+
+        <ImageView
+            android:id="@+id/imageView1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/emf_logo_small" />
+
+        <TextView
+            android:id="@+id/textView1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="EMF 2014 Patient Report System"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:textSize="32sp" />
+    </LinearLayout>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Start New PRF" />
+        android:gravity="center_horizontal"
+        android:paddingBottom="30dp" >
+
+        <Button
+            android:id="@+id/main_start_new_prf"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingBottom="20dp"
+            android:text="Start New PRF"
+            android:textSize="32sp" />
+
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_horizontal" >
+
+        <Button
+            android:id="@+id/Button01"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Minor Wound Dressed"
+            android:textSize="32sp" />
+    </RelativeLayout>
 
 </LinearLayout>
